[package]
name = "site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "*"
axum = "*"
itertools = "*"
serde = { version = "*", features = ["derive"] }
thiserror = "*"
tokio = { version = "*", features = ["full"] }
toml = "*"
tracing = "*"
tracing-subscriber = { version="*" }
